# gf-layers

./: .gitmodules  AUTHORS  CMakeLists.txt  CONTRIBUTORS  README.md  dev_shell.sh.template  dictionary.dic
.github/workflows/: build.sh  build.yml  dev_build.sh  dev_build.yml
cmake/: empty.cpp
doc/: notes.md
docs/: conventions.md
scripts/: check_all.sh  check_build.sh  check_clang_tidy.sh  check_clean_build.sh  check_compile_commands.sh  check_cppcheck.sh  check_cpplint.sh  check_format.sh  check_generated.sh  check_headers.py  check_iwyu.sh  fix_format.sh  generate_files.py  generate_open_cl.py  gf_layers_cc_files.sh  gf_layers_source_files.sh
src/: .clang-tidy  CPPLINT.cfg  iwyu.imp
src/VK_LAYER_GF_frame_counter/: CMakeLists.txt  VK_LAYER_GF_frame_counter.def  VK_LAYER_GF_frame_counter.exports  VK_LAYER_GF_frame_counter.lds  VK_LAYER_GF_frame_counter_android.lds  VK_LAYER_GF_frame_counter_darwin.json  VK_LAYER_GF_frame_counter_unix.json  VK_LAYER_GF_frame_counter_windows.json
src/VK_LAYER_GF_frame_counter/src/: frame_counter_layer.cc
src/VkLayer_GF_amber_scoop/: CMakeLists.txt  VkLayer_GF_amber_scoop.def  VkLayer_GF_amber_scoop.exports  VkLayer_GF_amber_scoop.lds  VkLayer_GF_amber_scoop_android.lds  VkLayer_GF_amber_scoop_darwin.json  VkLayer_GF_amber_scoop_unix.json  VkLayer_GF_amber_scoop_windows.json
src/VkLayer_GF_amber_scoop/include/VkLayer_GF_amber_scoop/: amber_scoop_layer.h  buffer_copy.h  buffer_to_file.h  command_buffer_data.h  create_info_wrapper.h  descriptor_set_data.h  draw_call_tracker.h  graphics_pipeline_data.h  shader_module_data.h  vk_deep_copy.h  vulkan_commands.h  vulkan_formats.h  vulkan_util.h
src/VkLayer_GF_amber_scoop/include/vk_layer_amber_scoop/: vk_deep_copy.h  vulkan_commands.h
src/VkLayer_GF_amber_scoop/src/: amber_scoop_layer.cc  buffer_copy.cc  buffer_to_file.cc  command_buffer_data.cc  descriptor_set_data.cc  draw_call_tracker.cc  graphics_pipeline_data.cc  vk_deep_copy.cc  vulkan_commands.cc  vulkan_formats.cc
src/VkLayer_GF_frame_counter/: CMakeLists.txt  VkLayer_GF_frame_counter.def  VkLayer_GF_frame_counter.exports  VkLayer_GF_frame_counter.lds  VkLayer_GF_frame_counter_darwin.json  VkLayer_GF_frame_counter_unix.json
src/VkLayer_GF_frame_counter/src/: frame_counter_layer.cc
src/VkLayer_GF_shader_fuzzer/: CMakeLists.txt  VkLayer_GF_frame_counter_windows.json  VkLayer_GF_shader_fuzzer.def  VkLayer_GF_shader_fuzzer.exports  VkLayer_GF_shader_fuzzer.lds  VkLayer_GF_shader_fuzzer_android.lds  VkLayer_GF_shader_fuzzer_darwin.json  VkLayer_GF_shader_fuzzer_unix.json  VkLayer_GF_shader_fuzzer_windows.json
src/VkLayer_GF_shader_fuzzer/src/: shader_fuzzer_layer.cc
src/gf_layers_layer_util/: CMakeLists.txt
src/gf_layers_layer_util/include/gf_layers_layer_util/: logging.h  settings.h  spirv.h  util.h
src/gf_layers_layer_util/src/: logging.cc  settings.cc  spirv.cc  util.cc
src/gf_layers_opencl_capture/: CMakeLists.txt  gf_layers_opencl_capture_android.lds
src/gf_layers_opencl_capture/include/gf_layers_opencl_capture/: opencl_capture.h  opencl_gen.h  opencl_load_functions.inc
src/gf_layers_opencl_capture/src/: opencl_capture.cc
